Oct-27-2000 - Stephan Kulow (v0.7.3)
  o Fixed pot file handling.  'make package-messages' should now work.

Oct-14-2000 - Malte Starostik (v0.7.2)
  o Added --help option
  o Added option to not run ./configure on newly created project

Sep-26-2000 - Kurt Granroth (v0.7.1)
  o Added hooks for more KAboutData information
  o Now building moc files as moc.cpp instead of #including them

Jul-21-2000 - Kurt Granroth (v0.7)
  o Now using an HTML KPart component instead of a widget since that
    is The Right Thing to Do(tm)
  o Renamed .png files to use sizes in the names

Jun-09-2000 - Kurt Granroth (v0.6.3)
  o Added i18n() around preference titles... mostly so it would
    compile with the newly ambiguous KDialogBase::addPage methods

May-30-2000 - Kurt Granroth (v0.6.2)
  o Removed KAccel stuff... KKeyDialog can handle action collections
  o Use KURLRequesterDlg instead of homemade job

Mar-14-2000 - Kurt Granroth (v0.6.1)
  o Added toolbar editor
  o Changed sample html code to reflect khtml changes

Feb-26-2000 - Kurt Granroth (v0.6)
  o Converted to use the new XML UI framework (big change!)

Jan-12-2000 - Kurt Granroth (v0.5.2)
  o Use KAboutData and KCmdLineArgs

Dec-28-1999 - Kurt Granroth (v0.5.1)
  o The po Makefile now uses the autogenerated rules.  I don't know
    why I didn't notice that capability before

Dec-25-1999 - Kurt Granroth (v0.5)
  o Use standard actions instead of constructing everything manually
    (big change!)
  o Allow .po files to be installed in $DESTDIR
  o Added .spec file for RPM fans

Dec-05-1999 - Kurt Granroth (v0.4.5)
  o Changed 'QCString' to QString in DCOP iface stuff...

Nov-29-1999 - Kurt Granroth (v0.4.4)
  o Added sample DCOP client for app
  o Fixed .desktop file
  o Made QPrinter a member var so settings are saved

Nov-26-1999 - Kurt Granroth (v0.4.3)
  o Beefed up the print function with more boilerplate stuff
  o KAccel keys should now work

Nov-20-1999 - Kurt Granroth (v0.4.2)
  o Use mkinstalldirs instead of mkdir
