@@ -1,4 +1,4 @@
-KAppTemplate v0.7.3
+KAppTemplate v0.7.4
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
